--- a/Manual/Shikaku.html
+++ b/Manual/Shikaku.html
@@ -87,7 +87,9 @@
 					<br/><br/>
 					<p>Lines within a shape can be extended one or more squares.<br/>
 						Take special care of the difference between <span class="symbol">S</span> and
-						<span class="symbol">W</span>. The former consists of two touching lines, the latter consists of three lines.
+						<span class="symbol">W</span>. The former consists of two touching lines, the latter consists of three lines.<br/>
+						To paint squares, first click on a square with a symbol or number on it to set your paint color. To toggle between symbols, click on the symbol while it is already your current paint color.<br/>
+						The module will be solved once all conditions are met.
 					</p>
 				</div>
 				<div class="page-footer relative-footer">Page 1 of 1</div>
